--- a/.github/workflows/act.yaml
+++ b/.github/workflows/act.yaml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   hello-world:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Print Hello World
         run: echo "Hello World
